# novo-vcc

./: .env.example  .gitignore  README.md  api_main.py  main.py  pyproject.toml
app/api/: __init__.py  routes.py
app/chat/: __init__.py  chatbot.py
app/config/: __init__.py  settings.py
app/ingestion/: __init__.py  ingestor.py
app/integrations/: openai_provider.py
app/models/: contrato.py
app/processing/: __init__.py  employees.py  execution.py
app/storage/: __init__.py  execution_tracker.py  relational_db_adapter.py  vector_store_adapter.py
app/ui/: __init__.py  chat.py  contracts.py  executions.py  prompts.py
tests/: test_api.py  test_config_settings.py  test_contrato.py  test_employee_resolver.py  test_execution_tracker.py  test_exhaustive_processor.py  test_ingestor.py  test_openai_api.py  test_openai_provider.py  test_relational_db.py  test_structured_ingestor.py  test_ui_contracts.py  test_ui_executions.py  test_vector_store.py
tests/data/: contratos_tst.csv
